DOMjudge Programming Contest Judging System

Version 3.1.5 - SVN
-------------------
 - Fix testing for empty output with strlen (port from ETH tree).
 - Add missing SQL select privilege on submission.valid column.
   [Note: upgrade the SQL database with 'dj-setup-database upgrade']
 - Rename SQL upgrade snippets and add README file for these.

Version 3.1.4 - 27 August 2011
------------------------------
 - Prevent empty lines in diff output due to DOS newlines.
 - Move charset defines to common-config for judgedaemon.
 - Fix HTML validation error.
 - Fix static compilation with GHC.
 - Use language extension instead of langid in submit_solution().
 - Fix broken link to ISO country codes.
 - Add note on VERIFICATION_REQUIRED setting to judge manual.
 - Reintroduce accidentally removed DEBUG_SQL query count.
 - Use make builtin CURDIR since not all shells export PWD.

Version 3.1.3 - 21 December 2010
--------------------------------
 - In JS problem name detection, probid needs to be casenormalised too.
 - Fix websubmit when using numeric problem ID's, thanks Vladimir Vassiliev.
 - Improve documentation on JVM memory problems.
 - Set MySQL connection encoding explicitly. Introduces a new option:
   DJ_CHARACTER_SET_MYSQL.

Version 3.1.2 - 27 October 2010
-------------------------------
 - Fix missing permissions for plugin interface SQL user.
 - Fix information leak in clarification problems list. (Closes: #3096018)
 - Small documentation improvements.
 - Do not check scoreboard cache for key integrity; this
   prevents deletion of teams while adding no real value.

Version 3.1.1 - 22 August 2010
------------------------------
 - Update upstream autoconf macro's fixing multiple small bugs.
 - Fix autoconf checks for libcURL and static linking.
 - Fix Makefile rules for building library objects and for
   (re)generating configure script.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.